--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
           <input type="text" id="filterDescription">
         </div>
         <div class="filterOption">
-          <button onclick="applyFilter()" title="Search with current filter" >Apply filter</button>
-          <button onclick="resetFilter()" title="Clear filter" >Reset filter</button>
+          <button onclick="applyFilter()" title="Search with current filter" >Search</button>
+          <button onclick="resetFilter()" title="Clear filter" >Reset</button>
         </div>
       </div>
       <table id="taskTable">
