--- a/index.html
+++ b/index.html
@@ -11,14 +11,22 @@
   <header>
     <nav>
       <h1>To Do List</h1>
-      <a href="#" onclick="toggleTheme()" class="theme-toggle" title="Toggle theme">☀️</a>
+      <div class="config">
+        <div class="gear-icon" onclick="toggleSettings()">⚙️</div>
+        <div id="settingsMenu">
+          <a class="a-btn" onclick="exportTasks()">Export Tasks</a>
+          <a class="a-btn" onclick="importTasks()">Import Task</a>
+        </div>
+        <a href="#" onclick="toggleTheme()" class="theme-toggle" title="Toggle theme">☀️</a>
+      </div>
     </nav>
   </header>
+
   <main>
     <div class="container">
       <div class="form">
         <input type="text" id="titleInput" placeholder="Title">
-        <input type="text" id="descriptionInput" placeholder="Description">
+        <textarea id="descriptionInput" placeholder="Description"></textarea>
         <input type="date" id="dueDateInput">
         <button onclick="addTask()" title="Add a new Task">Add Task</button>
         <a id="toggleFilterButton" class="a-btn" onclick="toggleFilter()" title="Open/Close Filter">▼</a>
@@ -70,7 +78,7 @@
            </div>
           <div class="modal-content">
             <label for="editTaskDescription">Description:</label>
-            <input type="text" id="editTaskDescription" placeholder="Description"/>
+            <textarea id="editTaskDescription" cols="60" placeholder="Description"></textarea>
           </div>
           <div class="modal-content">
             <label for="editTaskDueDate">Due Date:</label>
@@ -89,7 +97,7 @@
             <th>Title</th>
             <th>Description</th>
             <th>Due Date</th>
-            <th>Completed <a class="a-btn" href="#" onclick="clearAllTasks()" title="Clear all tasks">🗑️</a></th>
+            <th class="table-flex">Completed <a class="a-btn" href="#" onclick="clearAllTasks()" title="Clear all tasks">🗑️</a></th>
           </tr>
         </thead>
         <tbody id="taskList"></tbody>
