order asc, desc, none by due date

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
           <tr>
             <th>Title</th>
             <th>Description</th>
-            <th>Due Date</th>
+            <th id="dueDateHeader" onclick="sortTasksByDate()">Due Date</th>
             <th class="table-flex">Completed <a class="a-btn" href="#" onclick="clearAllTasks()" title="Clear all tasks">🗑️</a></th>
           </tr>
         </thead>
