UI list, list fixes

--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 <body class="dark-mode">
   <header>
     <nav>
-      <h1>To Do List</h1>
+      <h1><a href="https://jarierca.github.io/ToDoList/" class="title">To Do List</a></h1>
       <div id="listNameContainer">
           <a href="#" id="listNameLink" onclick="toggleListOptions()">Current List ▼</a>
           <div id="listOptions" class="" onmouseleave="hideListOptions()"> </div>
           <a class="a-btn" id="editListNameButton" onclick="editListName()" title="Edit List Name">📝</a>
-           <a class="a-btn" href="#" onclick="clearCurrentListTasks()" title="Clear all tasks from the current list">🗑️</a>
+          <a class="a-btn" href="#" onclick="clearCurrentListTasks()" title="Clear all tasks from the current list">🗑️</a>
       </div>
       <div class="config">
         <div class="gear-icon" onclick="toggleSettings()">⚙️</div>
