subtasks styles, hide/show subtasks, tasks edit not saving subtasks

--- a/index.html
+++ b/index.html
@@ -72,6 +72,10 @@
           <label for="filterDescription">Description:</label>
           <input type="text" id="filterDescription">
         </div>
+        <div class="filterOption">
+          <label for="filterSubTaskTitle">SubTask Title:</label>
+          <input type="text" id="filterSubTaskTitle">
+        </div>
         <div class="filterOption filterOptionButtons">
           <div>
             <button onclick="applyFilter()" title="Search with current filter" >Search</button>
